[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/square.png" type="Texture" id=1]
[ext_resource path="res://world/gamestate.gd" type="Script" id=2]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=1]
0/name = "square.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="world" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
self_modulate = Color( 0.00784314, 0.321569, 0.458824, 1 )
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 53, 0, 0, 54, 0, 0, 55, 0, 0, 65536, 0, 0, 65561, 0, 0, 65562, 0, 0, 65573, 0, 0, 65574, 0, 0, 65591, 0, 0, 131072, 0, 0, 131098, 0, 0, 131109, 0, 0, 131127, 0, 0, 196608, 0, 0, 196634, 0, 0, 196635, 0, 0, 196644, 0, 0, 196645, 0, 0, 196663, 0, 0, 262144, 0, 0, 262171, 0, 0, 262180, 0, 0, 262199, 0, 0, 327680, 0, 0, 327707, 0, 0, 327708, 0, 0, 327715, 0, 0, 327716, 0, 0, 327735, 0, 0, 327736, 0, 0, 393216, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 0, 0, 393250, 0, 0, 393251, 0, 0, 393272, 0, 0, 458752, 0, 0, 458808, 0, 0, 524288, 0, 0, 524344, 0, 0, 589824, 0, 0, 589880, 0, 0, 655360, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 0, 655393, 0, 0, 655394, 0, 0, 655395, 0, 0, 655396, 0, 0, 655416, 0, 0, 720896, 0, 0, 720926, 0, 0, 720932, 0, 0, 720952, 0, 0, 786432, 0, 0, 786462, 0, 0, 786468, 0, 0, 786488, 0, 0, 851968, 0, 0, 851998, 0, 0, 852004, 0, 0, 852024, 0, 0, 917504, 0, 0, 917534, 0, 0, 917540, 0, 0, 917560, 0, 0, 983040, 0, 0, 983070, 0, 0, 983076, 0, 0, 983096, 0, 0, 1048576, 0, 0, 1048606, 0, 0, 1048612, 0, 0, 1048632, 0, 0, 1114112, 0, 0, 1114142, 0, 0, 1114148, 0, 0, 1114168, 0, 0, 1179648, 0, 0, 1179678, 0, 0, 1179684, 0, 0, 1179703, 0, 0, 1179704, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245220, 0, 0, 1245239, 0, 0, 1310756, 0, 0, 1310775, 0, 0, 1376292, 0, 0, 1376311, 0, 0, 1441828, 0, 0, 1441847, 0, 0, 1507364, 0, 0, 1507383, 0, 0, 1572900, 0, 0, 1572901, 0, 0, 1572902, 0, 0, 1572903, 0, 0, 1572904, 0, 0, 1572905, 0, 0, 1572906, 0, 0, 1572907, 0, 0, 1572908, 0, 0, 1572909, 0, 0, 1572910, 0, 0, 1572911, 0, 0, 1572912, 0, 0, 1572913, 0, 0, 1572914, 0, 0, 1572915, 0, 0, 1572916, 0, 0, 1572917, 0, 0, 1572918, 0, 0, 1572919, 0, 0 )

[node name="players" type="Node" parent="."]

[node name="player_spawn" type="Position2D" parent="."]
position = Vector2( 350, 325 )

[node name="enemies" type="Node" parent="."]

[node name="enemy_spawn" type="Node" parent="."]

[node name="Position2D" type="Position2D" parent="enemy_spawn"]
position = Vector2( 445, 142 )

[node name="Position2D2" type="Position2D" parent="enemy_spawn"]
position = Vector2( 670, 318 )

[node name="Position2D3" type="Position2D" parent="enemy_spawn"]
position = Vector2( 852, 530 )

[node name="Position2D4" type="Position2D" parent="enemy_spawn"]
position = Vector2( 1693, 100 )

[node name="Position2D5" type="Position2D" parent="enemy_spawn"]
position = Vector2( 1679, 708 )

[node name="enemy_spawn_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="enemy_spawn_timer" to="." method="_on_enemy_spawn_timer_timeout"]
